# claude-code-template

./: .gitignore  CLAUDE.md  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  CLAUDE.md  README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  main.py
